Remove 'Hub' from all naming
- Updated repository name from ai-maniacs-hub to ai-maniacs
- Changed all content references from 'AI Maniacs Hub' to 'AI Maniacs'
- Updated package.json, docusaurus.config.ts, and blog authors
- Fixed GitHub URLs and edit links throughout the project
- Updated blog post titles and content references
- Cleaned up branding to focus on 'AI Maniacs' identity

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,12 +1,12 @@
 ai_maniacs_team:
-  name: AI Maniacs Hub Team
+  name: AI Maniacs Team
   title: AI Education & Community Leaders
-  url: https://github.com/ai-maniacs-hub
-  image_url: https://github.com/ai-maniacs-hub.png
+  url: https://github.com/ai-maniacs
+  image_url: https://github.com/ai-maniacs.png
   page: true
   socials:
-    github: ai-maniacs-hub
-    linkedin: ai-maniacs-hub
+    github: ai-maniacs
+    linkedin: ai-maniacs
 
 seth:
   name: Seth
