feat: Add issue templates for content improvement and feature requests
docs: Update copilot instructions for clarity and structure

docs: Enhance contributing guidelines with detailed instructions and standards

chore: Add MIT license file for open source compliance

docs: Revise README to improve contribution instructions and project overview

fix: Correct internal links and improve content flow in AI 101 and AI 201 modules

feat: Introduce AI 201 course with structured modules for intermediate learning

fix: Update conclusion and real-world applications documentation for consistency metrics

chore: Update package.json with repository details and keywords

--- a/package.json
+++ b/package.json
@@ -2,6 +2,24 @@
     "name": "ai-maniacs",
     "version": "0.0.0",
     "private": true,
+    "license": "MIT",
+    "description": "AI education platform for complete beginners - teaching AI fundamentals, tools, and best practices",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/sethdavis512/ai-maniacs.git"
+    },
+    "bugs": {
+        "url": "https://github.com/sethdavis512/ai-maniacs/issues"
+    },
+    "homepage": "https://sethdavis512.github.io/ai-maniacs/",
+    "keywords": [
+        "ai",
+        "education",
+        "learning",
+        "beginners",
+        "artificial-intelligence",
+        "docusaurus"
+    ],
     "scripts": {
         "docusaurus": "docusaurus",
         "start": "docusaurus start",
