--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -2,7 +2,7 @@ ai_maniacs_team:
   name: AI Maniacs Team
   title: AI Education & Community Leaders
   url: https://github.com/sethdavis512/ai-maniacs
-  image_url: https://github.com/sethdavis512/ai-maniacs.png
+  image_url: https://github.com/sethdavis512.png
   page: true
   socials:
     github: sethdavis512
