fix: Update homepage and sitemap URLs for the new domain

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "bugs": {
         "url": "https://github.com/sethdavis512/ai-maniacs/issues"
     },
-    "homepage": "https://sethdavis512.github.io/ai-maniacs/",
+    "homepage": "https://ai-maniacs.com",
     "keywords": [
         "ai",
         "education",
