Add AI Resources and Tools & Platforms documentation
- Created new documentation for Learning & Education resources, including online courses, books, and certifications.
- Added AI Tools & Platforms documentation detailing various AI applications for content creation, productivity, and development.
- Updated docusaurus configuration to include new sidebars for AI Resources.
- Added links to AI Resources in the main navigation and sidebar.
- Updated package.json to include posthog-js for analytics.
- Made minor formatting adjustments in existing components for consistency.

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@docusaurus/preset-classic": "3.8.1",
         "@mdx-js/react": "^3.0.0",
         "clsx": "^2.0.0",
+        "posthog-js": "^1.261.0",
         "prism-react-renderer": "^2.3.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0"
